objects/agf__ADM_Copy_Log__c.object
<CustomObject>
    <fields>
        <fullName>agf__Copied_From__c</fullName>
        <label>Copied From</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Copied_On__c</fullName>
        <label>Copied On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Failures__c</fullName>
        <label>Failures</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Text__c</fullName>
        <label>Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <description>Used to identify which type of copy log this is going to be. We currently use 3 types: changelist for perforce checkins, error to report errors with the sync, and work to represent the migration of bugs from bugforce to work records on the platform.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Changelist</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Upserts__c</fullName>
        <label>Inserts/Updates</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Copy Log</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Copy Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copy Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>